--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <P> If you are reading this, thank you for visiting my first crack at designing a webpage. The first few weeks using Treehouses' selfpaced tools were daunting, but the more and more I exercise the skills I learned here, the more patterns I see. Just like learning a language, the real way to learn is immersing yourself in the conversation you are building through your projects and being comfortable with not knowing everything right away </p>
       <p> The biggest challenge I forsee in my journey will be my ability to keep a steady pace of continued study. I am prone to procrastinating and feeling discouraged. I hope to be able to surprise myself in the next few weeks. </P>
       <P> I am looking forward to seeing the results. To celebrate this first page, here's a picture of my dog Carmen!</p>
-        <img src="images/carmen.jpg" alt="photo of white dog" class="dog-image">
+        <img src="images/Carmen.jpg" alt="photo of white dog" class="dog-image">
       <p> cheers!</p>
 
     </div>
